--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,24 @@ html {
 }
 
 ::-webkit-scrollbar {
-  width: 5px; /* wider for arrow space, but arrows won't show */
-  background: #18111d;
+  width: 7.5px; /* wider for arrow space, but arrows won't show */
+  background: #454546;
   
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--light-slate);
+  background: var(--yellow-bright);
   border-radius: 6px;
-  border: 4px solid var(--light-slate);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--yellow-bright);
+  border-radius: 12px;
+  box-shadow: 0 0 12px var(--yellow-bright);
 }
 
 ::-webkit-scrollbar-corner {
-  background: var(--light-grey);
+  background: var(--yellow-bright);
 }
 
 
@@ -45,9 +50,32 @@ html {
 
 .App {
   font-family: "NTR", sans-serif;
-  background: var(--linear-gradient);
   display: flex;
   margin: auto;
+}
+
+.gradient {
+  top: 0;
+  left: 0;
+  z-index: -1; /* Make sure it's behind everything */
+  background: var(--linear-gradient);
+  background: radial-gradient(circle at 60% 40%, #04250f55 0%, transparent 60%),
+              linear-gradient(to bottom, #010b1d 0%, #081123 20%, #010b1d 40%, #081123 60%, #010b1d 80%);
+  background-blend-mode: lighten, lighten, lighten, normal;
+  background-size: 200% 200%, 180% 180%;
+  animation: gradient-fabric 3s ease-in-out alternate;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 100%;
+  }
+  50% {
+    background-position: 100% 0%;
+  }
+  100% {
+    background-position: 0% 100%;
+  }
 }
 .App-logo {
   height: 40vmin;
@@ -108,7 +136,7 @@ a {
 .section-title {
   font-family: "NTR", sans-serif;
   color: var(--off-white);
-  font-size: 60px;
+  font-size: 48px;
   font-weight: 650;
 }
 
