--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,7 +1,10 @@
 #about {
   min-height: 50vh;
   margin: auto;
-  max-width: 1000px;  
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding-bottom: 100px;
 }
 
@@ -18,7 +21,7 @@
 .about-description li {
   position: relative;
   padding-left: 20px;
-  font-size: 16px;
+  font-size: 20px;
   color: var(--off-white);
 }
 
@@ -37,8 +40,7 @@
 .about-description {
   font-family: "NTR", sans-serif;
   color: var(--off-white);
-  max-width: 600px;
-  font-size: 17px;
+  font-size: 20px;
   text-align: left;
   line-height: 1.7;
   margin: 0;
@@ -46,7 +48,7 @@
 
 .about-description a,
 .about-description b {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -62,7 +64,12 @@
     font-size: 15px;
     text-align: left;
   }
-
+.about-description li {
+  position: relative;
+  padding-left: 20px;
+  font-size: 15px;
+  color: var(--off-white);
+}
   .about-description a,
   .about-description b {
     font-size: 15px;
@@ -70,5 +77,14 @@
 
   .about-content {
     display: unset;
+  }
+}
+
+@media only screen and (min-width: 2000px) {
+  #about {
+  display: flex;
+  margin: auto;
+  margin-top: -400px;
+  min-height: 100vh;
   }
 }
