--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -5,7 +5,7 @@
   text-align: center;
   margin: auto;
   max-width: 1000px;
-  margin-top: 200px;
+  margin-top: 120px;
   min-height: 100vh
 }
 
@@ -43,6 +43,12 @@
   font-size: 36px;
 }
 
+.intro-subtitle-name {
+  font-family: "NTR", sans-serif;
+  color: var(--yellow-bright);
+  font-size: 36px;
+}
+
 .intro-desc {
   color: var(--off-white);
   margin-top: -30px;
@@ -53,66 +59,10 @@
   margin-bottom: 30px;
 }
 
-.intro-stars-tip {
-  font-size: 20px;
-  color: var(--yellow-bright);
-  text-align: center;
-}
-.stars-typist {
-  color: var(--off-white);
-  text-align: center;
-  font-size: 20px;
-  margin-top: 10px;
-}
-
-.intro-click-here {
-  color: var(--yellow-bright);
-  text-align: center;
-  font-size: 20px;
-  margin-top: -30px;
-  margin-bottom: -10px;
-}
-
-.intro-popup-overlay {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  color: rgba(0,0,0,0.4);
-  z-index: 1000;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.intro-popup {
-  background: #0f0f00;
-  color: #fff;
-  padding: 28px 36px;
-  border-radius: 14px;
-  box-shadow: 0 8px 32px #000a;
-  z-index: 1001;
-  max-width: 350;
-  text-align: center;
-}
-
-.intro-question-mark {
-  color: var(--yellow-bright);
-  cursor: pointer;
-  margin-left: 4;
-  font-weight: bold;
-  font-size: 1.2em;
-  filter: drop-shadow(0 3px 4px rgba(241, 255, 39, 0.74));
-}
-
-.popup-text {
-  color: #ccd6f6;
-  font-weight: bold;
-}
-
 @media only screen and (max-width: 600px) {
   #intro {
     align-items: center;
-    margin-top: 90px;
+    margin-top: 60px;
     min-height: 80vh;
   }
 
@@ -129,27 +79,19 @@
   }
 
   .intro-subtitle {
-    font-size: 18px;
+    font-size: 20px;
     margin-top: 0px;  
   }
+  .intro-subtitle-name {
+  color: var(--yellow-bright);
+  font-size: 20px;
+}
+
 
   .intro-desc {
     font-size: 16px;
     max-width: unset;
     margin-bottom: 15px;
-  }
-  .intro-stars-tip {
-    font-size: 15px;
-    max-width: unset;
-  }
-
-  .stars-typist {
-    color: var(--off-white);
-    text-align: center;
-    font-size: 15px;
-  }
-  .intro-click-here {
-    font-size: 16px;
   }
 }
 
@@ -161,7 +103,7 @@
   text-align: center;
   margin: auto;
   max-width: 1000px;
-  margin-top: 400px;
+  margin-top: 300px;
   min-height: 100vh
   }
 }
