--- a/src/styles/Spiral.css
+++ b/src/styles/Spiral.css
@@ -39,11 +39,9 @@ h1 {
   position: center;
   background: radial-gradient(ellipse at center, #070a14 0%, #000000ee 65%);
   border-radius: 50%;
-  border: #585423c7 1px solid;
-  box-shadow: 0 0 20px 4px rgba(116, 132, 35, 0.15),
-              0 0 8px 2px rgba(226, 213, 38, 0.15);
-  width: 150px;
-  height: 150px;
+  box-shadow: 0 0 8px 2px rgba(38, 226, 104, 0.15);
+  width: 250px;
+  height: 250px;
   margin-bottom: 70px;
   display: flex;
   flex-direction: column;
@@ -69,9 +67,7 @@ h1 {
 
 .animation-container:hover,
 .animation-container:active {
-  border: #585423c7 1px solid;
   transform: scale(0.95);
-  filter: drop-shadow(0 0 1px rgba(226, 213, 38, 0.5));
   transition: var(--transition);
 }
 
@@ -81,8 +77,8 @@ h1 {
 
 .circle-container {
   position: relative;
-  width: 110px;
-  height: 110px;
+  width: 200px;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -312,8 +308,8 @@ h1 {
 /* 9. Fibonacci Spiral (div version) */
 .fibonacci-container {
   position: absolute;
-  width: 125px;
-  height: 125px;
+  width: 200px;
+  height: 200px;
   animation: rotateSlow 30s infinite linear;
   transform-origin: center;
 }
