--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -18,7 +18,7 @@
 .joblist-job-company {
   font-family: "NTR", sans-serif;
   font-size: 24px;
-  color: var(--yellow-bright);
+  color: var(--green-bright);
   font-weight: bold;
 }
 
@@ -46,11 +46,11 @@
 }
 
 .PrivateTabIndicator-colorSecondary-5 {
-  background-color: var(--yellow-bright) !important;
+  background-color: var(--green-bright) !important;
 }
 
 .jss5 {
-  background-color: var(--yellow-bright) !important;
+  background-color: var(--green-bright) !important;
 }
 
 .makeStyles-tabs-2 {
@@ -60,7 +60,7 @@
   padding: 6px 20px;
 }
 .MuiButtonBase-root:focus {
-  color: var(--yellow-bright) !important;
+  color: var(--green-bright) !important;
 }
 
 ul {
@@ -69,7 +69,7 @@ ul {
 
 .job-description li::before {
   content: "▹    ";
-  color: var(--yellow-bright);
+  color: var(--green-bright);
   position: absolute;
   left: 0;
 }
