--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-bottom: 100px;
 }
 
 .about-description ul {
@@ -15,7 +14,6 @@
   display: grid;
   grid-template-columns: repeat(2, minmax(150px, 10px));
   padding-left: 0;
-  margin: 10px 25px;
 }
 
 .about-description li {
@@ -27,7 +25,7 @@
 
 .about-description li::before {
   content: "▹    ";
-  color: var(--yellow-bright);
+  color: var(--green-bright);
   position: absolute;
   left: 0;
 }
@@ -80,11 +78,4 @@
   }
 }
 
-@media only screen and (min-width: 2000px) {
-  #about {
-  display: flex;
-  margin: auto;
-  margin-top: -400px;
-  min-height: 100vh;
-  }
-}
+
