--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,9 +1,10 @@
 :root {
-  --black-opacity: #010b1d25; /* NavBar */
-  --linear-gradient: linear-gradient(to bottom,#010b1d 0%,#081123 20%,#010b1d 40%, #081123 60%, #010b1d 80%); /* Page Background Color */
-  --yellow-bright: #34d768; /* Highlight Text, Glow, Tags */
+  --nav-color: #0e1f1c80; /* NavBar */
+  --linear-gradient: linear-gradient(to bottom,#0e1f1c 0%,#030617 20%,#0d0716 40%, #030617 60%, #17322E 80%, #030617 100%); /* Page Background Color */
+  --green-bright: #64D98A; /* Highlight Text, Glow, Tags */
   --off-white: #b3b3b3; /* TEXT MAIN */
   --navy: #0E192D; /* Project Boxes */
   --light-grey: #3d3d3d; /* Divider */
-  --shadow: 0 1px 4px #242121a8; /* Shadow */
-  --transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1); /* Transition */ }
+  --shadow: 0 4px 4px #0e0e0e60; /* Shadow */
+  --transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1); /* Transition */ 
+}
