--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,10 +1,10 @@
 .navbar {
-    background-color: var(--black-opacity);
+    background-color: var(--nav-color);
     font-family: "NTR", sans-serif;
     font-weight: 600;
     padding: 10px 60px !important;
     font-size: 1.1rem;
-    backdrop-filter: blur(24px);
+    backdrop-filter: blur(10px);
   }
   
 
@@ -15,8 +15,7 @@
 
 .navbar-at-top {
   box-shadow:none !important;
-  padding: 25px 60px !important;
-  border-bottom: none !important;
+  padding: 20px 60px !important;
 }
 .navbar-animated.navbar-hidden {
   transform: translateY(-100%);
@@ -36,7 +35,7 @@
   }
 
 .navbar-nav .nav-link:hover {
-    color: var(--yellow-bright) !important;
+    color: var(--green-bright) !important;
     filter: drop-shadow(0 3px 4px rgba(0, 255, 85, 0.5));
     scale:1.1;
     transition: var(--transition);
@@ -84,7 +83,7 @@
     }
   .navbar-at-top {
       box-shadow: none !important;
-      padding: 20px 20px !important;
+      padding: 15px 20px !important;
       align-items: center;
       justify-content: center;
 }
@@ -111,7 +110,7 @@
       cursor: pointer;
     }
   .navbar-star-btn:hover {
-      color: var(--yellow-bright) !important;
+      color: var(--green-bright) !important;
       filter: drop-shadow(0 3px 4px rgba(0, 255, 85, 0.5));
       scale:1.1;
       transition: var(--transition);
@@ -120,7 +119,7 @@
       content: "";
       width: 1.5px;
       height: 20px; /* or 100% if you want it to stretch */
-      background-color: var(--yellow-bright);
+      background-color: var(--green-bright);
       filter: drop-shadow(0 3px 4px rgb(0, 255, 85));
       display: flex;
       margin: 10px 10px;
