--- a/src/styles/SideNavBar.css
+++ b/src/styles/SideNavBar.css
@@ -13,7 +13,7 @@
   color: var(--off-white) !important;
 }
 .side-navbar a:hover {
-  color: var(--yellow-bright) !important;
+  color: var(--green-bright) !important;
   scale:1.1;
   filter: drop-shadow(0 3px 4px rgba(0, 255, 85, 0.7));
   transition: var(--transition);
@@ -22,7 +22,7 @@
 .side-navbar-divider {
   width: 30px;
   height: 1.5px;
-  background-color: var(--yellow-bright);
+  background-color: var(--green-bright);
   border-radius: 10px;
   filter: drop-shadow(0 3px 4px rgb(0, 255, 85));
 }
@@ -41,7 +41,7 @@
 
 
 .side-navbar button.star-btn:hover {
-  color: var(--yellow-bright) !important;
+  color: var(--green-bright) !important;
   scale:1.1;
   filter: drop-shadow(0 3px 4px rgba(0, 255, 85, 0.7));
   transition: var(--transition);
