--- a/src/styles/Spiral.css
+++ b/src/styles/Spiral.css
@@ -1,17 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-
-h1 {
-  margin-bottom: 30px;
-  font-size: 24px;
-  letter-spacing: 1px;
-  text-align: center;
-}
-
 .spiral-container {
   display: flex;
   grid-template-columns: repeat(3, 1fr);
@@ -24,13 +10,11 @@ h1 {
 
 @media (max-width: 768px) {
   .spiral-container {
-    padding-top: 50px;
     transform: scale(0.95);
   }
 }
 @media (max-width: 600px) {
   .spiral-container {
-    padding-top: 5px;
     transform: scale(0.95);
   }
 }
@@ -40,8 +24,8 @@ h1 {
   background: radial-gradient(ellipse at center, #070a14 0%, #000000ee 65%);
   border-radius: 50%;
   box-shadow: 0 0 8px 2px rgba(38, 226, 104, 0.15);
-  width: 250px;
-  height: 250px;
+  width: 225px;
+  height: 225px;
   margin-bottom: 70px;
   display: flex;
   flex-direction: column;
@@ -69,6 +53,7 @@ h1 {
 .animation-container:active {
   transform: scale(0.95);
   transition: var(--transition);
+  filter: drop-shadow(0 0 1px var(--green-bright));
 }
 
 .animation-title {
@@ -77,8 +62,8 @@ h1 {
 
 .circle-container {
   position: relative;
-  width: 200px;
-  height: 200px;
+  width: 175px;
+  height: 175px;
   display: flex;
   justify-content: center;
   align-items: center;
