--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,70 +1,100 @@
 #experience {
   min-height: 50vh;
   margin: auto;
-  max-width: 750px;
+  max-width: 800px;
   align-content: center;
   justify-content: center;
   padding-top: 200px;
   padding-bottom: 100px;
 }
 
+.joblist-root {
+  display: flex;
+  border-radius: 10px;
+  min-height: 300px;
+  margin: 1rem 0;
+  background: #030817;
+
+
+}
+
+.joblist-tabs {
+  display: flex;
+  flex-direction: column;
+  min-width: 160px;
+  background:#030817;
+  padding-top: 0.5rem;
+}
+
+.joblist-tab {
+  background: none;
+  border: none;
+  color: var(--off-white, #bfc9d5);
+  padding: 1rem 1.5rem;
+  cursor: pointer;
+  text-align: left;
+  font-size: 16px;
+  transition: var(--transition);
+  outline: none;
+}
+
+.joblist-tab.active,
+.joblist-tab:focus {
+  background: #101224;
+  color: #64d98a;
+  font-weight: bold;
+  border-left: 3px solid #64d98a;
+}
+
+.joblist-tab:hover {
+  background: #101224;
+  color: #64d98a;
+}
+
+.joblist-content {
+  flex: 1;
+  padding: 1.5rem;
+}
+
 .joblist-job-title {
   font-family: "NTR", sans-serif;
-  font-size: 24px;
+  font-size: 30px;
   font-weight: bold;
-  color: var(--off-white);
+  color: var(--lightest-slate);
 }
 
 .joblist-job-company {
   font-family: "NTR", sans-serif;
-  font-size: 24px;
+  font-size: 30px;
   color: var(--green-bright);
   font-weight: bold;
+  margin-left: 0.5rem;
 }
 
 .joblist-duration {
   font-family: "NTR", sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   color: var(--off-white);
-}
-
-#vertical-tabpanel {
-  margin-top: -28px;
-  padding-left: 25px;
-}
-
-.MuiTab-wrapper {
-  font-size: 13px;
-  text-align: left;
-  align-items: flex-start !important;
-  font-family: "NTR", sans-serif;
-}
-
-.MuiButtonBase-root {
-  outline: none !important;
-  color: var(--off-white) !important;
-}
-
-.PrivateTabIndicator-colorSecondary-5 {
-  background-color: var(--green-bright) !important;
-}
-
-.jss5 {
-  background-color: var(--green-bright) !important;
-}
-
-.makeStyles-tabs-2 {
-  border-right: 1px solid var(--navy) !important;
-}
-#experience .MuiTab-root {
-  padding: 6px 20px;
-}
-.MuiButtonBase-root:focus {
-  color: var(--green-bright) !important;
+  margin-bottom: 1rem;
 }
 
 ul {
   list-style: none;
+}
+
+.job-description {
+  padding-top: 24px;
+  font-family: "NTR", sans-serif;
+  margin-top: 0.5rem;
+  padding-left: 1.2rem;
+}
+
+.job-description li {
+  position: relative;
+  padding-left: 30px;
+  padding-bottom: 16px;
+  font-size: 18px;
+  color: var(--off-white);
 }
 
 .job-description li::before {
@@ -74,48 +104,34 @@ ul {
   left: 0;
 }
 
-.job-description li {
-  position: relative;
-  padding-left: 30px;
-  padding-bottom: 16px;
-  font-size: 15px;
-  color: var(--off-white);
-}
-
-.job-description {
-  padding-top: 24px;
-  max-width: 650px;
-  font-family: "NTR", sans-serif;
-  font-size: 18px;
-}
-
-.job-description a,
-.job-description b {
-  font-size: 19px;
-  font-weight: bold;
-}
-
 @media only screen and (max-width: 600px) {
   #experience {
     padding-left: unset;
     padding-right: unset;
   }
-
-  .jss1 {
-    height: unset !important;
-    flex-direction: column !important;
-  }
-
-  .makeStyles-root-1 {
-    height: unset !important;
-    width: unset;
+  .joblist-root {
     flex-direction: column;
+    min-width: 0;
+    padding: 0.5rem;
   }
-
-  .joblist-job-title {
-    font-size: 22px;
+  .joblist-tabs {
+    flex-direction: row;
+    border-right: none;
+    min-width: 0;
+    padding-top: 0;
   }
-
+  .joblist-tab {
+    padding: 0.7rem 1rem;
+    font-size: 0.95rem;
+    border-left: none;
+    border-bottom: 3px solid transparent;
+  }
+  .joblist-tab.active,
+  .joblist-tab:focus {
+    border-left: none;
+    border-bottom: 3px solid #64d98a;
+  }
+  .joblist-job-title,
   .joblist-job-company {
     font-size: 22px;
   }
