--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -19,6 +19,7 @@
   display: flex;  
   flex-direction: column;
   border-radius: 10px;
+  background: #232c3b;
   box-shadow: var(--shadow-box);
 }
 
