--- a/src/styles/SideNavBar.css
+++ b/src/styles/SideNavBar.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   width: 60px;
   gap: 30px;
+  z-index: 1000;
 }
 .side-navbar a {
   color: var(--off-white) !important;
